--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
+-<p style="text-decoration:underline;"><a href="/talkmap.html"> Current Courses</a></p>
+{% for post in site.teaching.current reversed %}
+  {% include archive-single.html %}
+{% endfor %}
+-<p style="text-decoration:underline;"><a href="/talkmap.html"> Previous Courses</a></p>
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
