--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,12 +5,12 @@ permalink: /teaching/
 author_profile: true
 ---
 
--<p style="text-decoration:underline;"> Current Courses</p>
+<p style="text-decoration:underline;"> Current Courses</p>
 
 <p> To come soon... </p>
--<p style="text-decoration:underline;"> Previous Courses</p>
+<p style="text-decoration:underline;"> Previous Courses</p>
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
-  {% include archive-single.html %}
+  {% include archive-single.html.title %}
 {% endfor %}
