--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,5 +12,5 @@ author_profile: true
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
-  {% include archive-single.title %}
+  {% include archive-single.html %}
 {% endfor %}
