--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,10 +5,31 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<p style="text-decoration:underline;"> Current Courses</p>
+<div class="Current Courses">
+    <h1 style="text-decoration:underline;"> Current Courses</h1>
+    <p> Will update this for Fall 2020</p>
 
-<p> To come soon... </p>
-<p style="text-decoration:underline;"> Previous Courses</p>
+</div>
+
+<div class="Past Courses">
+<h1 style="text-decoration:underline;"> Previous Courses</h1>
+
+    <ul>
+        <li>ECO391 Economic and Business Statistics</li>
+        <li>ECO 702 Advanded Neoclassical Macroeconomics (TA)</li>
+        <li>Prep Course for Macroeconomics Prelimary Exam</li>
+        <li>ECO 202 Principles of Macroeconomics (TA)</li>
+        <li>ECO 201 Principles of Microeconomics (TA)</li>
+    </ul>
+    <p> Will update this for Fall 2020</p>
+
+    <ul class="links">
+        <li><a href="http://www.uky.edu/canvas/">UKY Canvas</a></li>
+        <li><a href="https://gatton.uky.edu/faculty-research/departments/economics">UKY Econ Department</a></li>
+
+    </ul>
+</div>
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
