--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -15,11 +15,11 @@ author_profile: true
 <h1 style="text-decoration:underline;"> Previous Courses</h1>
 
     <ul>
-        <li>ECO391 Economic and Business Statistics</li>
-        <li>ECO 702 Advanded Neoclassical Macroeconomics (TA)</li>
-        <li>Prep Course for Macroeconomics Prelimary Exam</li>
-        <li>ECO 202 Principles of Macroeconomics (TA)</li>
-        <li>ECO 201 Principles of Microeconomics (TA)</li>
+        <li>< a href= "https://cacoleman16.github.io/teaching/eco391uk" </a> ECO391 Economic and Business Statistics</li>
+        <li><a href= "https://cacoleman16.github.io/teaching/eco702uk" </a> ECO 702 Advanded Neoclassical Macroeconomics (TA)</li>
+        <li>< a href= "https://cacoleman16.github.io/teaching/prelimprep_2020_uk" </a> Prep Course for Macroeconomics Prelimary Exam</li>
+        <li> < a href= "https://cacoleman16.github.io/teaching/eco202uk" </a> ECO 202 Principles of Macroeconomics (TA)</li>
+        <li> < a href= "https://cacoleman16.github.io/teaching/eco201uk" </a> ECO 201 Principles of Microeconomics (TA)</li>
     </ul>
     <p> Will update this for Fall 2020</p>
 
@@ -30,8 +30,4 @@ author_profile: true
     </ul>
 </div>
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.url %}
-{% endfor %}
