--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -22,7 +22,9 @@ author_profile: true
         <li><a href= "https://cacoleman16.github.io/teaching/eco201uk"> ECO 201 Principles of Microeconomics (TA)</a> </li>
     </ul>
     <p> Will update this for Fall 2020</p>
-
+    
+    <div class="Links">
+<h1 style="text-decoration:underline;"> Links</h1>
     <ul class="links">
         <li><a href="http://www.uky.edu/canvas/">UKY Canvas</a></li>
         <li><a href="https://gatton.uky.edu/faculty-research/departments/economics">UKY Econ Department</a></li>
