--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -16,7 +16,7 @@ author_profile: true
 
     <ul>
         <li><a href= "https://cacoleman16.github.io/teaching/eco391uk"> ECO391 Economic and Business Statistics</a> </li>
-        <li><a href= "https://cacoleman16.github.io/teaching/eco702uk"> ECO 702 Advanded Neoclassical Macroeconomics (TA)</a> </li>
+        <li><a href= "https://cacoleman16.github.io/teaching/eco702uk"> ECO 702 Advanced Neoclassical Macroeconomics (TA)</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/prelimprep_2020_uk"> Prep Course for Macroeconomics Prelimary Exam</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/eco202uk"> ECO 202 Principles of Macroeconomics (TA)</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/eco201uk"> ECO 201 Principles of Microeconomics (TA)</a> </li>
