--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,8 +7,11 @@ author_profile: true
 
 <div class="Current Courses">
     <h1 style="text-decoration:underline;"> Current Courses</h1>
-    <p> Will update this for Fall 2020</p>
-
+    <ul>
+        <li><a href= "https://cacoleman16.github.io/teaching/eco393"> ECO393 Sports Economics (TA)</a> </li>
+        <li><a> Analysis of Economic Condtions (TA) </a> </li>
+    </ul>
+/teaching/eco393
 </div>
 
 <div class="Past Courses">
@@ -21,7 +24,7 @@ author_profile: true
         <li><a href= "https://cacoleman16.github.io/teaching/eco202uk"> ECO 202 Principles of Macroeconomics (TA)</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/eco201uk"> ECO 201 Principles of Microeconomics (TA)</a> </li>
     </ul>
-    <p> Will update this for Fall 2020</p>
+  
     
     <div class="Links">
 <h1 style="text-decoration:underline;"> Links</h1>
