--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,9 +9,9 @@ author_profile: true
     <h1 style="text-decoration:underline;"> Current Courses</h1>
     <ul>
         <li><a href= "https://cacoleman16.github.io/teaching/eco393"> ECO393 Sports Economics (TA)</a> </li>
-        <li><a> Analysis of Economic Condtions (TA) </a> </li>
+        <li><a> ECO 463 Analysis of Economic Condtions (TA) </a> </li>
     </ul>
-/teaching/eco393
+
 </div>
 
 <div class="Past Courses">
