--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,8 +8,7 @@ author_profile: true
 <div class="Current Courses">
     <h1 style="text-decoration:underline;"> Current Courses</h1>
     <ul>
-        <li><a href= "https://cacoleman16.github.io/teaching/eco393"> ECO393 Sports Economics (TA)</a> </li>
-        <li><a> ECO 463 Analysis of Economic Condtions (TA) </a> </li>
+        <li><a> ECO410: R for Economists </a> </li>
     </ul>
 
 </div>
@@ -18,6 +17,8 @@ author_profile: true
 <h1 style="text-decoration:underline;"> Previous Courses</h1>
 
     <ul>
+        <li><a href= "https://cacoleman16.github.io/teaching/eco393"> ECO393 Sports Economics (TA)</a> </li>
+        <li><a> ECO 463 Analysis of Economic Condtions (TA) </a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/eco391uk"> ECO391 Economic and Business Statistics</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/eco702uk"> ECO 702 Advanced Neoclassical Macroeconomics (TA)</a> </li>
         <li><a href= "https://cacoleman16.github.io/teaching/prelimprep_2020_uk"> Prep Course for Macroeconomics Prelimary Exam</a> </li>
